# qqc2-darkly-style

./: CMakeLists.txt  QQC2DarklyStyleConfig.cmake.in  README.md
kirigami-plasmadesktop-integration/: CMakeLists.txt
style/: CMakeLists.txt  DarklyDark.colors  DarklyLight.colors
style/impl/: CMakeLists.txt  CheckIndicator.qml  IconLabelContent.qml  RadioIndicator.qml  SliderGroove.qml  SliderHandle.qml  TextEditBackground.qml  Units.qml  darklydial.cpp  darklydial.h  iconlabellayout.cpp  iconlabellayout.h  iconlabellayout_p.h  qquickicon.cpp  qquickicon_p.h
style/qtquickcontrols/: BusyIndicator.qml  Button.qml  CMakeLists.txt  CheckBox.qml  CheckDelegate.qml  ComboBox.qml  DelayButton.qml  Dial.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  Frame.qml  GroupBox.qml  HorizontalHeaderView.qml  ItemDelegate.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  MobileTextActionsToolBar.qml  Page.qml  PageIndicator.qml  Pane.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RadioDelegate.qml  RangeSlider.qml  RoundButton.qml  ScrollBar.qml  ScrollIndicator.qml  Slider.qml  SpinBox.qml  SplitView.qml  SwipeDelegate.qml  Switch.qml  SwitchDelegate.qml  TabBar.qml  TabButton.qml  TextArea.qml  (+6 more)
